--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <i class="ri-arrow-up-s-line"></i>
         </div>
         
-        <div class="indietro hidden">
+        <div class="indietro ">
             <i class="ri-arrow-down-s-line"></i>
         </div>
         <div class="mini-imag">
